--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <button class="colorBtn">Click to change color</button>
+    <div class="container">
+      <h2 class="colorTxt">This hex color is: <span class="hex"></span></h2>
+      <button class="colorBtn">Click to change color</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
