--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <h2 class="colorTxt">This hex color is: <span class="hex"></span></h2>
       <button class="colorBtn">Click to change color</button>
+      <span class="corner">GitHub @kevinmighty98</span>
     </div>
     <script src="script.js"></script>
   </body>
